--- a/src/app/testPage/styles.module.scss
+++ b/src/app/testPage/styles.module.scss
@@ -4,22 +4,60 @@
     justify-content: center;
 
     .content {
-        width: 70%;
+        width: 90%;
         display: flex;
         justify-content: center;
 
         .wrapper {
             .inputContainer {
-                padding: 2rem;
-                width: 30rem;
+                padding: 2rem 0rem;
+                width: 35rem;
                 height: 11rem;
                 display: block;
-
-            
-              
             }
         }
         .tableWrapper {
+            border: 2px solid #00467d;
+            border-radius: 5px;
+            width: 100%;
+            .ul {
+                display: flex;
+                justify-content: center;
+                list-style-type: none;
+
+                li {
+                    padding: 0.25rem;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    text-decoration: none;
+                    font-weight: 600;
+                    background-color: azure;
+
+                    text-align: center;
+                }
+
+                .liName {
+                    width: 35%;
+                }
+                .liQuatity {
+                    width: 20%;
+                }
+                .liValue {
+                    width: 20%;
+                }
+                .liController {
+                    width: 20%;
+                    font-size: small;
+                }
+                .liEditDelete {
+                    display: flex;
+                    justify-content: space-around;
+                    width: 25%;
+
+                    font-size: small;
+                }
+            }
         }
     }
 }
