--- a/src/app/components/inputsPost/styles.module.scss
+++ b/src/app/components/inputsPost/styles.module.scss
@@ -1,6 +1,5 @@
 .inputContent {
     display: flex;
-    display: flex;
     justify-content: space-around;
     p {
         color: #001c32;
@@ -47,5 +46,10 @@
         font-weight: 600;
         font-size: 1rem;
         cursor: pointer;
+        transition: transform 0.3s;
+        &:hover {
+            background-color: #003f70;
+            border: 2px solid #003f70;
+        }
     }
 }
