--- a/src/app/components/tableRows/styles.module.scss
+++ b/src/app/components/tableRows/styles.module.scss
@@ -15,27 +15,22 @@
         }
         .liQuatity {
             width: 20%;
-        }
-        .liValue {
-            width: 20%;
-        }
-        .tdButton {
             display: flex;
             justify-content: space-around;
             align-items: center;
-            width: 20%;
+            font-weight: 600;
 
             .tdPlus {
-                width: 2rem;
+                width: 1rem;
                 height: 1rem;
-                border: 1px solid #319e09;
-                border-radius: 5px;
+                border: none;
+                border-radius: 20px;
                 background-color: white;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 cursor: pointer;
-                transition: 0.3s;
+                transition: transform 0.3s;
                 svg {
                     color: #319e09;
                 }
@@ -48,10 +43,10 @@
             }
 
             .tdSubtract {
-                width: 2rem;
+                width: 1rem;
                 height: 1rem;
-                border: 1px solid #9e1611;
-                border-radius: 5px;
+                border: none;
+                border-radius: 20px;
                 background-color: white;
                 display: flex;
                 justify-content: center;
@@ -69,12 +64,22 @@
                 }
             }
         }
+        .liValue {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 20%;
+        }
+
         .liEditDelete {
             display: flex;
+            align-items: center;
             justify-content: space-around;
             width: 25%;
             position: relative;
             .buttonEdit {
+                display: flex;
+                align-items: center;
                 background-color: white;
                 border: none;
                 cursor: pointer;
@@ -86,15 +91,15 @@
                 &::before {
                     content: "";
                     position: absolute;
-                    width: 2.25rem;
+                    width: 2rem;
                     height: 2px;
                     border-radius: 4px;
                     background-color: #00467d;
-                    bottom: 5px;
-                    left: 0.75rem;
+                    bottom: 3px;
+                    left: 1.25rem;
                     transform-origin: right;
                     transform: scaleX(0);
-                    transition: transform 0.5s ease-in-out;
+                    transition: transform 0.3s ease-in-out;
                 }
                 &:hover::before {
                     transform-origin: left;
@@ -102,6 +107,8 @@
                 }
             }
             .buttonDelete {
+                display: flex;
+                align-items: center;
                 background-color: white;
                 color: #676767;
                 border: none;
@@ -113,15 +120,15 @@
                     content: "";
 
                     position: absolute;
-                    width: 2.5rem;
+                    width: 2rem;
                     height: 2px;
                     border-radius: 4px;
                     background-color: #003864;
-                    bottom: 5px;
-                    left: 4.5rem;
+                    bottom: 3px;
+                    left: 5.5rem;
                     transform-origin: right;
                     transform: scaleX(0);
-                    transition: transform 0.5s ease-in-out;
+                    transition: transform 0.3s ease-in-out;
                 }
                 &:hover::before {
                     transform-origin: left;
