--- a/src/app/testPage/styles.module.scss
+++ b/src/app/testPage/styles.module.scss
@@ -1,57 +1,66 @@
 .mainContainer {
-    height: 35rem;
     display: flex;
     justify-content: center;
-
+    font-size: small;
     .content {
         width: 90%;
-        display: flex;
-        justify-content: center;
-
         .wrapper {
             position: relative;
 
+            .noFilters {
+                display: flex;
+                justify-content: flex-end;
+                margin-right: 1rem;
+                height: 2rem;
+
+                button {
+                    background-color: white;
+                    border: none;
+                    color: #676767;
+                    cursor: pointer;
+                    &:hover {
+                        color: #3e3e42;
+                        text-decoration: underline;
+                    }
+                }
+            }
             .inputContainer {
-                padding: 2rem 0rem;
-                width: 35rem;
+                padding: 2rem 1rem;
                 height: auto;
                 display: flex;
                 justify-content: center;
             }
-
+            .divNoContent {
+                height: 10rem;
+                text-transform: capitalize;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-wrap: wrap;
+                text-align: center;
+            }
             .tableContainer {
-                width: 37rem;
-                height: 22rem;
+                height: 30rem;
                 padding-right: 0.5rem;
                 overflow-x: hidden;
                 overflow-y: auto;
-
-                // &::after {
-                //     content: "";
-                //     position: absolute;
-                //     bottom: 80px;
-                //     left: 0;
-                //     width: 98%;
-                //     height: 10px;
-                //     z-index: 3;
-                //     box-shadow: 10px -10px 10px rgba(0, 0, 0, 0.2);
-                // }
-
                 .tableWrapper {
                     position: relative;
-
                     border: 2px solid #00467d;
                     border-top: none;
                     border-radius: 5px;
                     width: 100%;
+                    height: 30rem;
+                    overflow-x: hidden;
 
                     .ul {
                         display: flex;
                         justify-content: center;
                         list-style-type: none;
+                        height: 3rem;
                         position: sticky;
                         top: 0px;
-                        z-index: 3;
+                        z-index: 1;
                         border-top: 2px solid #00467d;
                         border-top-left-radius: 3px;
                         border-top-right-radius: 3px;
@@ -68,13 +77,58 @@
                         }
 
                         .liName {
-                            width: 35%;
+                            width: 30%;
+                            .filterNameWrapper {
+                                display: block;
+                                color: #676767;
+                                position: relative;
+                                left: 0.5rem;
+                                top: 2px;
+
+                                .CaretUp {
+                                    cursor: pointer;
+                                    font-weight: 700;
+                                    &:hover {
+                                        color: #121212;
+                                    }
+                                }
+                                .CaretDown {
+                                    cursor: pointer;
+                                    &:hover {
+                                        color: #121212;
+                                    }
+                                }
+                            }
                         }
                         .liQuatity {
                             width: 20%;
                         }
                         .liValue {
                             width: 20%;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            .filterWrapper {
+                                display: block;
+                                color: #676767;
+                                position: relative;
+                                left: 0.5rem;
+                                top: 2px;
+
+                                .CaretUp {
+                                    cursor: pointer;
+                                    font-weight: 700;
+                                    &:hover {
+                                        color: #121212;
+                                    }
+                                }
+                                .CaretDown {
+                                    cursor: pointer;
+                                    &:hover {
+                                        color: #121212;
+                                    }
+                                }
+                            }
                         }
                         .liController {
                             width: 20%;
@@ -82,14 +136,273 @@
                         }
                         .liEditDelete {
                             display: flex;
-                            justify-content: space-around;
+                            justify-content: space-between;
                             width: 25%;
-                            font-size: small;
+                            font-size: 9px;
                         }
                     }
                 }
+            }
+        }
+    }
+}
+@media only screen and (min-width: 390px) {
+    .mainContainer {
+        .content {
+            .wrapper {
+                .tableContainer {
+                    display: flex;
+                    justify-content: center;
+                    height: 35rem;
+                }
+            }
+        }
+    }
+}
 
-                /* Adicione sombras para criar o efeito visual */
+@media only screen and (min-width: 500px) {
+    .mainContainer {
+        .content {
+            .wrapper {
+                .tableContainer {
+                    .tableWrapper {
+                        .ul {
+                            .liName {
+                                .filterNameWrapper {
+                                    left: 2rem;
+                                }
+                            }
+                            .liValue {
+                                .filterWrapper {
+                                    left: 1rem;
+                                }
+                            }
+                            .liEditDelete {
+                                justify-content: space-around;
+                                font-size: small;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 700px) {
+    .mainContainer {
+        .content {
+            width: 80%;
+        }
+    }
+}
+@media only screen and (min-width: 800px) {
+    .mainContainer {
+        font-size: medium;
+        justify-content: center;
+        .content {
+            width: 70%;
+            .wrapper {
+                .noFilters {
+                    width: 100%;
+                    margin-right: 2rem;
+                }
+
+                .tableContainer {
+                    width: 100%;
+                    height: 30rem;
+
+                    .tableWrapper {
+                        height: 24rem;
+
+                        .ul {
+                            .liEditDelete {
+                                font-size: medium;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media only screen and (min-width: 900px) {
+    .mainContainer {
+        .content {
+            width: 70%;
+        }
+    }
+}
+@media only screen and (min-width: 1000px) {
+    .mainContainer {
+        .content {
+            width: 60%;
+        }
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    .mainContainer {
+        .content {
+            width: 50%;
+            .wrapper {
+                .tableContainer {
+                    height: auto;
+
+                    .tableWrapper {
+                        .ul {
+                            .liName {
+                                .filterNameWrapper {
+                                    left: 0.5rem;
+                                    .CaretUp {
+                                        margin-bottom: -0.25rem;
+                                        height: 0.8rem;
+                                    }
+                                    .CaretDown {
+                                        margin-top: -0.25rem;
+                                        height: 0.8rem;
+                                        margin-bottom: 0.25rem;
+                                    }
+                                }
+                            }
+                            .liValue {
+                                .filterWrapper {
+                                    .CaretUp {
+                                        margin-bottom: -0.25rem;
+                                        height: 0.8rem;
+                                    }
+                                    .CaretDown {
+                                        margin-top: -0.25rem;
+                                        height: 0.8rem;
+                                        margin-bottom: 0.25rem;
+                                    }
+                                }
+                            }
+
+                            .liEditDelete {
+                                justify-content: space-around;
+                                font-size: medium;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media only screen and (min-width: 1366px) {
+    .mainContainer {
+        font-size: medium;
+        justify-content: center;
+        .content {
+            width: 50%;
+            .wrapper {
+                .noFilters {
+                    width: 40rem;
+                }
+
+                .tableContainer {
+                    width: 100%;
+                    height: 30rem;
+
+                    .tableWrapper {
+                        height: 24rem;
+
+                        .ul {
+                            .liValue {
+                                .filterWrapper {
+                                    .CaretUp {
+                                        margin-bottom: -0.25rem;
+                                    }
+                                    .CaretDown {
+                                        margin-top: -0.25rem;
+
+                                        margin-bottom: 0.25rem;
+                                    }
+                                }
+                            }
+                            .liEditDelete {
+                                font-size: medium;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .mainContainer {
+        height: 800px;
+        .content {
+            width: 60%;
+            overflow: hidden;
+            .wrapper {
+                .inputContainer {
+                    margin: auto;
+                    padding: 3rem 1rem;
+                    width: 70%;
+                }
+                .tableContainer {
+                    height: 35rem;
+                    padding-right: 0.5rem;
+
+                    .tableWrapper {
+                        position: relative;
+                        border: 2px solid #00467d;
+                        border-top: none;
+                        border-radius: 5px;
+                        width: 100%;
+                        height: 30rem;
+                        overflow-x: hidden;
+
+                        .ul {
+                            .liEditDelete {
+                                font-size: medium;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media only screen and (min-width: 1920px) {
+    .mainContainer {
+        justify-content: center;
+        font-size: medium;
+        height: 1000px;
+        .content {
+            width: 50%;
+            overflow: hidden;
+            .wrapper {
+                .inputContainer {
+                    margin: auto;
+                    padding: 3rem 1rem;
+                    width: 70%;
+                }
+                .tableContainer {
+                    height: 30rem;
+                    padding-right: 0.5rem;
+                    overflow-x: hidden;
+                    overflow-y: auto;
+                    .tableWrapper {
+                        position: relative;
+                        border: 2px solid #00467d;
+                        border-top: none;
+                        border-radius: 5px;
+                        width: 100%;
+                        height: 30rem;
+                        overflow-x: hidden;
+
+                        .ul {
+                            .liEditDelete {
+                                font-size: medium;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
