--- a/src/app/testPage/styles.module.scss
+++ b/src/app/testPage/styles.module.scss
@@ -50,7 +50,8 @@
                     border-top: none;
                     border-radius: 5px;
                     width: 100%;
-                    height: 30rem;
+                    height: auto;
+                    max-height: 30rem;
                     overflow-x: hidden;
 
                     .ul {
@@ -153,7 +154,8 @@
                 .tableContainer {
                     display: flex;
                     justify-content: center;
-                    height: 35rem;
+                    height: auto;
+                    max-height: 35rem;
                 }
             }
         }
@@ -210,10 +212,13 @@
 
                 .tableContainer {
                     width: 100%;
-                    height: 30rem;
+
+                    height: auto;
+                    max-height: 30rem;
 
                     .tableWrapper {
-                        height: 24rem;
+                        height: auto;
+                        max-height: 24rem;
 
                         .ul {
                             .liEditDelete {
@@ -303,10 +308,13 @@
 
                 .tableContainer {
                     width: 100%;
-                    height: 30rem;
+                    height: auto;
+                    max-height: 30rem;
 
                     .tableWrapper {
-                        height: 24rem;
+                        width: 130%;
+                        height: auto;
+                        max-height: 24rem;
 
                         .ul {
                             .liValue {
@@ -345,7 +353,8 @@
                     width: 70%;
                 }
                 .tableContainer {
-                    height: 35rem;
+                    height: auto;
+                    max-height: 35rem;
                     padding-right: 0.5rem;
 
                     .tableWrapper {
@@ -354,7 +363,8 @@
                         border-top: none;
                         border-radius: 5px;
                         width: 100%;
-                        height: 30rem;
+                        height: auto;
+                        max-height: 30rem;
                         overflow-x: hidden;
 
                         .ul {
@@ -383,7 +393,8 @@
                     width: 70%;
                 }
                 .tableContainer {
-                    height: 30rem;
+                    height: auto;
+                    max-height: 30rem;
                     padding-right: 0.5rem;
                     overflow-x: hidden;
                     overflow-y: auto;
